--- a/index.html
+++ b/index.html
@@ -234,33 +234,26 @@
 
         /* ============ SIMPLE PRICING CARDS ============ */
         .pricing-simple {
-            background: var(--card-light);
-            border: 1px solid var(--border-light);
+            background: transparent;
+            border: 1px solid rgba(255,255,255,0.06);
             border-radius: 8px;
             padding: 1.5rem;
             text-align: center;
             position: relative;
             transition: var(--transition);
-            box-shadow: var(--shadow-sm);
-        }
-
-        body.dark-mode .pricing-simple {
-            background: var(--card-dark);
-            border-color: var(--border-dark);
+            box-shadow: 0 4px 20px rgba(0,0,0,0.6);
+            color: #ffffff;
         }
 
         .pricing-simple:hover {
             transform: translateY(-5px);
             box-shadow: var(--shadow-md);
+            border-color: var(--primary-color);
         }
 
         .pricing-simple.featured {
             border: 2px solid var(--success-color);
-            background: linear-gradient(135deg, rgba(25, 135, 84, 0.05), rgba(13, 110, 253, 0.05));
-        }
-
-        body.dark-mode .pricing-simple.featured {
-            background: linear-gradient(135deg, rgba(25, 135, 84, 0.1), rgba(13, 110, 253, 0.1));
+            background: linear-gradient(135deg, rgba(25, 135, 84, 0.04), rgba(13, 110, 253, 0.04));
         }
 
         .pricing-simple .badge {
@@ -280,11 +273,7 @@
             font-size: 1.3rem;
             font-weight: 700;
             margin: 0.5rem 0 1rem;
-            color: var(--text-light);
-        }
-
-        body.dark-mode .pricing-simple h4 {
-            color: var(--text-dark);
+            color: #ffffff;
         }
 
         .pricing-simple .price {
@@ -292,10 +281,6 @@
             font-weight: 800;
             color: var(--primary-color);
             margin: 0.5rem 0 1.2rem;
-        }
-
-        body.dark-mode .pricing-simple .price {
-            color: var(--info-color);
         }
 
         .pricing-simple ul {
@@ -335,6 +320,10 @@
             margin-top: 1rem;
         }
 
+        /* Ensure links and buttons are visible on dark sections */
+        section a, section a:hover { color: var(--info-color); text-decoration: none; }
+        section .btn-simple { color: white; }
+
         .btn-simple:hover {
             transform: translateY(-2px);
             box-shadow: 0 6px 20px rgba(13, 110, 253, 0.3);
@@ -343,27 +332,114 @@
 
         /* ============ HERO SECTION ============ */
         .hero-section {
-            background: #dc3545;
-            padding: 60px 20px 50px;
+            background: #000000;
+            padding: 80px 20px 60px;
             margin-top: 80px;
             position: relative;
             overflow: hidden;
+            color: #ffffff;
         }
 
         body.dark-mode .hero-section {
-            background: #c82333;
+            background: #000000;
         }
 
         .hero-section::before {
             content: '';
             position: absolute;
-            top: -50%;
-            right: -10%;
-            width: 600px;
-            height: 600px;
-            background: radial-gradient(circle, rgba(13, 110, 253, 0.15) 0%, transparent 70%);
-            border-radius: 50%;
+            top: -40%;
+            right: 0;
+            width: 500px;
+            height: 500px;
+            background: radial-gradient(circle at 30% 30%, rgba(13,110,253,0.14), rgba(13,110,253,0.04) 30%, transparent);
+            border-radius: 40%;
             filter: blur(40px);
+            transform: translateX(40%);
+        }
+
+        .hero-figure {
+            width: 420px;
+            height: 320px;
+            border-radius: 16px;
+            background: linear-gradient(135deg, rgba(13,110,253,0.12), rgba(220,53,69,0.08));
+            box-shadow: 0 20px 60px rgba(0,0,0,0.6), inset 0 1px 0 rgba(255,255,255,0.02);
+            position: relative;
+            border: 1px solid rgba(255,255,255,0.04);
+            overflow: hidden;
+        }
+
+        .hero-figure::after {
+            content: '';
+            position: absolute;
+            left: -40px;
+            top: -40px;
+            width: 200px;
+            height: 200px;
+            background: radial-gradient(circle, rgba(255,255,255,0.03), transparent 60%);
+            border-radius: 50%;
+            filter: blur(24px);
+            transform: rotate(15deg);
+            opacity: 0.8;
+        }
+
+        @keyframes float-up {
+            from { transform: translateY(12px); opacity: 0; }
+            to { transform: translateY(0); opacity: 1; }
+        }
+
+        .hero-content {
+            position: relative;
+            z-index: 2;
+            animation: float-up 0.9s cubic-bezier(0.165, 0.84, 0.44, 1) both;
+        }
+
+        .hero-content h1 {
+            font-size: 2.8rem;
+            font-weight: 800;
+            line-height: 1.05;
+            margin-bottom: 0.6rem;
+            color: #ffffff;
+            text-shadow: 0 4px 18px rgba(0,0,0,0.6);
+            background: linear-gradient(90deg, #ffffff, #0dcaf0, #0d6efd, #ffffff);
+            background-size: 300% 100%;
+            -webkit-background-clip: text;
+            background-clip: text;
+            -webkit-text-fill-color: transparent;
+            animation: bg-slide 6s linear infinite;
+        }
+
+        @keyframes bg-slide {
+            0% { background-position: 0% 0%; }
+            50% { background-position: 100% 0%; }
+            100% { background-position: 0% 0%; }
+        }
+
+        .hero-content p {
+            font-size: 1.05rem;
+            color: #e9ecef;
+            margin-bottom: 1.2rem;
+            max-width: 680px;
+            text-align: center;
+            margin-left: auto;
+            margin-right: auto;
+        }
+
+        .cta-buttons { 
+            justify-content: center; 
+            gap: 1rem; 
+        }
+
+        .btn-custom {
+            padding: 0.7rem 1.6rem;
+            font-weight: 700;
+            border-radius: 40px;
+            transition: var(--transition);
+            border: none;
+            display: inline-flex;
+            align-items: center;
+            gap: 0.6rem;
+            font-size: 0.95rem;
+            box-shadow: 0 6px 20px rgba(0,0,0,0.6);
         }
 
         .hero-content {
@@ -505,20 +581,16 @@
 
         /* ============ CARDS ============ */
         .card-custom {
-            background: var(--card-light);
-            border: 1px solid var(--border-light);
+            background: #0b1220;
+            border: 1px solid rgba(255,255,255,0.06);
             border-radius: 12px;
             padding: 2rem;
             transition: var(--transition);
-            box-shadow: var(--shadow-sm);
+            box-shadow: 0 4px 16px rgba(0,0,0,0.6);
             height: 100%;
             display: flex;
             flex-direction: column;
-        }
-
-        body.dark-mode .card-custom {
-            background: var(--card-dark);
-            border-color: var(--border-dark);
+            color: #ffffff;
         }
 
         .card-custom:hover {
@@ -531,22 +603,19 @@
             font-size: 3rem;
             margin-bottom: 1rem;
             display: inline-block;
+            color: var(--primary-color);
         }
 
         .card-custom h4 {
             font-size: 1.4rem;
             font-weight: 700;
             margin-bottom: 0.8rem;
-            color: var(--text-light);
-        }
-
-        body.dark-mode .card-custom h4 {
-            color: var(--text-dark);
+            color: #ffffff;
         }
 
         .card-custom p {
             font-size: 0.95rem;
-            color: var(--secondary-color);
+            color: #cbd5e0;
             margin-bottom: 0;
             flex-grow: 1;
         }
@@ -554,6 +623,8 @@
         /* ============ SECTIONS ============ */
         section {
             padding: 3rem 0;
+            background: #000000;
+            color: #ffffff;
         }
 
         .section-title {
@@ -564,21 +635,20 @@
             position: relative;
             display: inline-block;
             width: 100%;
-            background: linear-gradient(135deg, var(--text-light), #0d6efd);
-            -webkit-background-clip: text;
-            -webkit-text-fill-color: transparent;
-            background-clip: text;
+            color: #ffffff;
+            background: none;
+            -webkit-background-clip: initial;
+            background-clip: initial;
+            -webkit-text-fill-color: initial;
         }
 
         body.dark-mode .section-title {
-            background: linear-gradient(135deg, var(--text-dark), #0dcaf0);
-            -webkit-background-clip: text;
-            -webkit-text-fill-color: transparent;
+            color: #ffffff;
         }
 
         .section-subtitle {
             text-align: center;
-            color: var(--secondary-color);
+            color: #adb5bd;
             font-size: 0.95rem;
             margin-bottom: 2rem;
             max-width: 600px;
@@ -892,15 +962,9 @@
     <nav class="navbar navbar-expand-lg navbar-custom">
         <div class="container-fluid px-3 px-md-4 d-flex align-items-center">
             <div class="me-2 d-flex align-items-center">
-                <div class="dropdown">
-                    <a class="btn btn-sm btn-outline-dark dropdown-toggle support-btn" href="#" role="button" id="contactSupportBtn" data-bs-toggle="dropdown" aria-expanded="false">
-                        <i class="bi bi-telephone-fill"></i>
-                    </a>
-                    <ul class="dropdown-menu p-2 shadow" aria-labelledby="contactSupportBtn">
-                        <li><a class="dropdown-item" href="tel:+918179479516"><i class="bi bi-telephone-fill me-2"></i>Call +91 817-947-9516</a></li>
-                        <li><a class="dropdown-item" href="https://wa.me/918179479516" target="_blank"><i class="bi bi-whatsapp me-2"></i>WhatsApp +91 817-947-9516</a></li>
-                    </ul>
-                </div>
+                <button class="btn btn-sm btn-dark support-btn" data-bs-toggle="modal" data-bs-target="#contactModal" aria-label="Contact Support">
+                    <i class="bi bi-telephone-fill"></i>
+                </button>
             </div>
 
             <a class="navbar-brand" href="#home" onclick="smoothScroll('home')">
@@ -919,7 +983,7 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#about" onclick="smoothScroll('about')">
+                        <a class="nav-link" href="#about-section" onclick="smoothScroll('about-section')">
                             <i class="bi bi-info-circle-fill"></i> About
                         </a>
                     </li>
@@ -929,7 +993,7 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#pricing" onclick="smoothScroll('pricing')">
+                        <a class="nav-link" href="#pricing-section" onclick="smoothScroll('pricing-section')">
                             <i class="bi bi-tag-fill"></i> Pricing
                         </a>
                     </li>
@@ -973,7 +1037,7 @@
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#about" data-bs-dismiss="offcanvas" onclick="smoothScroll('about')">
+                    <a class="nav-link" href="#about-section" data-bs-dismiss="offcanvas" onclick="smoothScroll('about-section')">
                         <i class="bi bi-info-circle-fill"></i> About
                     </a>
                 </li>
@@ -983,7 +1047,7 @@
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#pricing" data-bs-dismiss="offcanvas" onclick="smoothScroll('pricing')">
+                    <a class="nav-link" href="#pricing-section" data-bs-dismiss="offcanvas" onclick="smoothScroll('pricing-section')">
                         <i class="bi bi-tag-fill"></i> Pricing
                     </a>
                 </li>
@@ -1004,30 +1068,37 @@
     <!-- HERO SECTION -->
     <section id="home" class="hero-section">
         <div class="container">
-            <div class="hero-content text-center">
-                <div class="discount-badge">
-                    <i class="bi bi-lightning-fill"></i> ₹5,000 OFF - 24 Hours Only!
+            <div class="row align-items-center">
+                <div class="col-md-6">
+                    <div class="hero-content text-start">
+                        <div class="discount-badge">
+                            <i class="bi bi-lightning-fill"></i> ₹5,000 OFF - 24 Hours Only!
+                        </div>
+                        <h1>
+                            Modern Web Solutions
+                        </h1>
+                        <p class="mt-3 mb-4">
+                            Fast, scalable & secure. Custom web development for your business.
+                        </p>
+                        <div class="cta-buttons">
+                            <a href="https://wa.me/918179479516?text=Hello%20RDMWebTech%2C%20I%20want%20to%20claim%20the%20discount" class="btn-custom btn-warning-custom" target="_blank">
+                                <i class="bi bi-whatsapp"></i> Claim Discount
+                            </a>
+                            <a href="#services" class="btn-custom btn-primary-custom" onclick="smoothScroll('services')">
+                                <i class="bi bi-arrow-right"></i> Services
+                            </a>
+                        </div>
+                    </div>
                 </div>
-                <h1>
-                    Modern Web Solutions
-                </h1>
-                <p class="mt-3 mb-4">
-                    Fast, scalable & secure. Custom web development for your business.
-                </p>
-                <div class="cta-buttons">
-                    <a href="https://wa.me/918179479516?text=Hello%20RDMWebTech%2C%20I%20want%20to%20claim%20the%20discount" class="btn-custom btn-warning-custom" target="_blank">
-                        <i class="bi bi-whatsapp"></i> Claim Discount
-                    </a>
-                    <a href="#services" class="btn-custom btn-primary-custom" onclick="smoothScroll('services')">
-                        <i class="bi bi-arrow-right"></i> Services
-                    </a>
+                <div class="col-md-6 d-none d-md-flex justify-content-center">
+                    <div class="hero-figure"></div>
                 </div>
             </div>
         </div>
     </section>
 
     <!-- ABOUT SECTION -->
-    <section id="about" id="about-section" class="about-section">
+    <section id="about-section" class="about-section">
         <div class="container">
             <h2 class="section-title">About RDMWebTech</h2>
             <div class="section-divider"></div>
@@ -1121,7 +1192,7 @@
     </section>
 
     <!-- PRICING SECTION -->
-    <section id="pricing" id="pricing-section" class="pricing-section">
+    <section id="pricing-section" class="pricing-section">
         <div class="container">
             <h2 class="section-title">Pricing Plans</h2>
             <div class="section-divider"></div>
@@ -1288,6 +1359,23 @@
         </div>
     </section>
 
+    <!-- CONTACT MODAL -->
+    <div class="modal fade" id="contactModal" tabindex="-1" aria-labelledby="contactModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-content">
+                <div class="modal-header border-0">
+                    <h5 class="modal-title" id="contactModalLabel">Contact Support</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body text-center">
+                    <p class="mb-3">Call or WhatsApp us:</p>
+                    <a class="btn btn-primary mb-2 d-block" href="tel:+918179479516"><i class="bi bi-telephone-fill me-2"></i>Call +91 817-947-9516</a>
+                    <a class="btn btn-success d-block" href="https://wa.me/918179479516" target="_blank"><i class="bi bi-whatsapp me-2"></i>WhatsApp +91 817-947-9516</a>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <!-- FOOTER -->
     <footer>
         <div class="container py-5">
@@ -1300,7 +1388,7 @@
                     <h5><i class="bi bi-link-45deg"></i> Quick Links</h5>
                     <ul>
                         <li><a href="#services" onclick="smoothScroll('services')"><i class="bi bi-arrow-right"></i> Services</a></li>
-                        <li><a href="#pricing" onclick="smoothScroll('pricing')"><i class="bi bi-arrow-right"></i> Pricing</a></li>
+                        <li><a href="#pricing-section" onclick="smoothScroll('pricing-section')"><i class="bi bi-arrow-right"></i> Pricing</a></li>
                         <li><a href="#tech" onclick="smoothScroll('tech')"><i class="bi bi-arrow-right"></i> Technologies</a></li>
                     </ul>
                 </div>
